--- a/CRM_System/AddRequestPage.xaml
+++ b/CRM_System/AddRequestPage.xaml
@@ -76,35 +76,30 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <TextBlock Text="Клиент:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10"/>
-        <TextBlock Text="Статус:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="1" Margin="10"/> <!--думаю можно сделать перечисление возможных статусов в enums и сделать комбач-->
-        <TextBlock Text="Дата:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="2" Margin="10"/>
-        <TextBlock Text="Продукция:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="3" Margin="10"/>
-        <TextBlock Text="Количесвто:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="4" Margin="10"/>
-        <TextBlock Text="Сумма:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="5" Margin="10"/> <!--это поле должно автоматически считаться-->
+        <TextBlock Text="Дата:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="1" Margin="10"/>
+        <TextBlock Text="Продукция:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="2" Margin="10"/>
+        <TextBlock Text="Количесвто:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="3" Margin="10"/>
+        <TextBlock Text="Сумма:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="4" Margin="10"/> <!--это поле должно автоматически считаться-->
         <Border Grid.Column="1" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <ComboBox Name="CB_Client" SelectedValuePath="ClientID" BorderThickness="1" BorderBrush="#FFCEA345"/>
+            <ComboBox Name="CB_Client" SelectedValuePath="ClientID" BorderThickness="1" BorderBrush="#FFCEA345" SelectedItem="{Binding Path=Client}" DisplayMemberPath="LastName"/>
         </Border>
         <Border Grid.Column="1" Grid.Row="1" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <TextBox BorderThickness="1" BorderBrush="#FFCEA345"/>
-        </Border>
-        <Border Grid.Column="1" Grid.Row="2" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
             <DatePicker Name="DP_Date" BorderThickness="1" BorderBrush="#FFCEA345"/>
         </Border>
-        <Border Grid.Column="1" Grid.Row="3" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <ComboBox Name="CB_Product" BorderThickness="1" BorderBrush="#FFCEA345" SelectedValuePath="ProductID"/>
+        <Border Grid.Column="1" Grid.Row="2" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
+            <ComboBox Name="CB_Product" BorderThickness="1" BorderBrush="#FFCEA345" SelectedValuePath="ProductID" SelectedItem="{Binding Path=Product}" DisplayMemberPath="Title"/>
         </Border>
-        <Border Grid.Column="1" Grid.Row="4" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
+        <Border Grid.Column="1" Grid.Row="3" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
             <TextBox Name ="TB_Quantity" BorderThickness="1" BorderBrush="#FFCEA345"/>
         </Border>
-        <Border Grid.Column="1" Grid.Row="5" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
+        <Border Grid.Column="1" Grid.Row="4" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
             <TextBox BorderThickness="1" BorderBrush="#FFCEA345"/>
         </Border>
-        <Button Grid.ColumnSpan="2" Grid.Row="6" Content="Добавить продукцию" Click="Button_Click"/> <!--как на складе, тип нажимаешь, и еще товар добавляешь-->
-        <StackPanel Grid.ColumnSpan="3" Grid.Row="7" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="205,0">
+        <Button Grid.ColumnSpan="2" Grid.Row="5" Content="Добавить продукцию" Click="Button_Click"/> <!--как на складе, тип нажимаешь, и еще товар добавляешь-->
+        <StackPanel Grid.ColumnSpan="3" Grid.Row="6" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="205,0">
             <Button Content="Оформить заявку" Click="Button_Click_1"/>
         </StackPanel>
     </Grid>
