--- a/CRM_System/ProductOfRequestPage.xaml
+++ b/CRM_System/ProductOfRequestPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CRM_System.RequestPage"
+﻿<Page x:Class="CRM_System.ProductOfRequestPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:CRM_System"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="RequestPage">
+      Title="ProductOfRequestPage">
     <Page.Resources>
         <Style TargetType="Button">
             <Setter Property="Width" Value="auto"/>
@@ -41,18 +41,12 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="DGR_Request" AutoGenerateColumns="False" SelectedValuePath="RequestID"> 
+        <DataGrid x:Name="DGR_Request" AutoGenerateColumns="False" SelectedValuePath="RequestID">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Клиент" Binding="{Binding Path=Client.TitleCompany}" Width="*"></DataGridTextColumn>
-                <DataGridTextColumn Header="Статус" Binding="{Binding Path=StatusRequest}" Width="*"></DataGridTextColumn>
-                <DataGridTextColumn Header="Дата" Binding="{Binding Path=DateRequest}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Продукция" Binding="{Binding Path=Product.Title}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Количесвто" Binding="{Binding Path=Quantity}" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Сумма" Binding="{Binding Path=Sum}" Width="*"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Content="Продукция в заявке" Click="Button_Click_3"/>
-            <Button Content="Добавить" Click="Button_Click"/>
-            <Button Content="Редактировать статус" Click="Button_Click_1"/>
-            <Button Content="Удалить" Click="Button_Click_2"/>
-        </StackPanel>
     </Grid>
 </Page>
