--- a/CRM_System/AddProductPage.xaml
+++ b/CRM_System/AddProductPage.xaml
@@ -96,13 +96,13 @@
         <TextBlock Text="Тип продукта:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="1" Margin="10"/>
         <TextBlock Text="Цена:" FontSize="15" FontFamily="Century Gothic" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="2" Margin="10"/>
         <Border Grid.Column="1" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <TextBox BorderThickness="1" BorderBrush="#FFCEA345"/>
+            <TextBox Name="TB_Title" BorderThickness="1" BorderBrush="#FFCEA345"/>
         </Border>
         <Border Grid.Column="1" Grid.Row="2" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <TextBox BorderThickness="1" BorderBrush="#FFCEA345"/>
+            <TextBox Name="TB_Price" BorderThickness="1" BorderBrush="#FFCEA345"/>
         </Border>
         <Border Grid.Column="1" Grid.Row="1" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <ComboBox x:Name="Cb_Type" BorderThickness="1" BorderBrush="#FFCEA345"  SelectedItem="{Binding Path=Product_Type}" DisplayMemberPath="Title"/>
+            <ComboBox x:Name="Cb_Type" SelectedValuePath="Product_TypeID" BorderThickness="1" BorderBrush="#FFCEA345"  SelectedItem="{Binding Path=Title}" DisplayMemberPath="Title"/>
         </Border>
         <Border BorderBrush="#F1F4FB" Grid.Column="2" Grid.RowSpan="3" Margin="0 10 0 10" Width="Auto" Height="Auto" BorderThickness="2">
             <StackPanel Orientation="Vertical">
