--- a/CRM_System/App.xaml
+++ b/CRM_System/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CRM_System"
-             StartupUri="MenuWindow.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Style x:Key="ButtonBack" TargetType="Button">
             <Setter Property="Width" Value="40"/>
