--- a/CRM_System/AddRequestPage.xaml
+++ b/CRM_System/AddRequestPage.xaml
@@ -93,10 +93,10 @@
             <ComboBox Name="CB_Product" BorderThickness="1" BorderBrush="#FFCEA345" SelectedValuePath="ProductID" DisplayMemberPath="Title"/>
         </Border>
         <Border Grid.Column="1" Grid.Row="3" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <TextBox Name ="TB_Quantity" BorderThickness="1" BorderBrush="#FFCEA345"/>
+            <TextBox Name ="TB_Quantity" BorderThickness="1" BorderBrush="#FFCEA345" TextChanged="TB_Quantity_TextChanged"/>
         </Border>
         <Border Grid.Column="1" Grid.Row="4" Width="auto" Height="30" Background="White" VerticalAlignment="Center">
-            <TextBox BorderThickness="1" BorderBrush="#FFCEA345"/>
+            <TextBox Name="TB_Result" IsReadOnly="True" BorderThickness="1" BorderBrush="#FFCEA345"/>
         </Border>
         <Button Grid.ColumnSpan="2" Grid.Row="5" Content="Добавить продукцию" Click="Button_Click"/> <!--как на складе, тип нажимаешь, и еще товар добавляешь-->
         <StackPanel Grid.ColumnSpan="3" Grid.Row="6" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="205,0">
