--- a/CRM_System/ProductListPage.xaml
+++ b/CRM_System/ProductListPage.xaml
@@ -59,11 +59,11 @@
                     <Grid Margin="20" Width="400">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="70"/>
-                            <RowDefinition Height="310"/>
+                            <RowDefinition Height="400"/>
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
-                        <Image Width="300" Grid.Row="1" Stretch="UniformToFill" HorizontalAlignment="Center" Margin="5">
+                        <Image Width="101" Height="390" Grid.Row="1" Stretch="UniformToFill" HorizontalAlignment="Center" Margin="5">
                             <Image.Source>
                                 <Binding Path="Photo">
                                     <Binding.TargetNullValue>
@@ -73,8 +73,8 @@
                             </Image.Source>
                         </Image>
                         <TextBlock Text="{Binding Path=Title}" VerticalAlignment="Center" TextAlignment="Center" Width="300" TextWrapping="Wrap"
-                                   HorizontalAlignment="Center" Margin="5 5" FontSize="26" Grid.Row="1" FontFamily="Century Gothic"></TextBlock>
-                        <TextBlock Text="{Binding Path=Price, StringFormat={}{0:N2} РУБ}" Grid.Row="2" Margin="5 5 5 15" HorizontalAlignment="Center" FontSize="26" FontFamily="Century Gothic" FontWeight="Bold"></TextBlock>
+                                   HorizontalAlignment="Center" Margin="5 5" FontSize="26" Grid.Row="2" FontFamily="Century Gothic"></TextBlock>
+                        <TextBlock Text="{Binding Path=Price, StringFormat={}{0:N2} РУБ}" Grid.Row="3" Margin="5 5 5 15" HorizontalAlignment="Center" FontSize="26" FontFamily="Century Gothic" FontWeight="Bold"></TextBlock>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
